[package]
authors = ["Nervos DT <dt-devops@nervos.org>"]
categories = ["command-line-utilities", "embedded", "no-std"]
description = "Zero cost stack overflow protection for CKB-VM"
keywords = ["RISC-V", "stack", "overflow"]
license = "MIT OR Apache-2.0"
name = "ckb-std-ld"
readme = "README.md"
repository = "https://github.com/jjyr/ckb-std-ld"
version = "0.1.0"
